--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </p>
         <p class="from">Wishes from <b class="nam"></b></p>
         <br />
-        <label>Enter your name:</label>
+        <label>Enter your name</label><br>
         <input id="nam" type="text">&nbsp;
         <button onclick="share()">Share</button>
       </div>
