--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 <body>
     <div class="app">
         <p class="head">Happy New Year</p>
-        <p class="year">2025</p>
+        <p class="year"><b>2025</b></p>
         <p class="wish">
-          As you step into 2025, <br /> may your dreams soar and your <br /> heart be filled with love. <br />
-          Happy new year!
+          As you step into 2025 may your dreams soar and your heart be filled with love.<br>Happy new year <b class="nam2">Kari</b>!
         </p>
-        <p class="from">Wishes from <b class="nam"></b></p>
-        <br />
-        <label>Enter your name</label><br>
-        <input id="nam" type="text">&nbsp;
-        <button onclick="share()">Share</button>
+        <p class="from"></p>
+        <br>
+        <div class="inputBox">
+          <label>Enter your name</label><br>
+          <input id="nam" type="text"><br><br>
+         <label>Enter friend's name</label><br>
+         <input id="nam2" type="text"><br><br>
+         <button onclick="wish()" class="btnWish">Wish</button>
+        </div>
       </div>
       <script src="index.js"></script>
 </body>
