--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="inputBox">
           <label>Enter your name</label><br>
           <input id="nam" type="text"><br><br>
-         <label>Enter friend's name</label><br>
+         <label>Enter your friend's name</label><br>
          <input id="nam2" type="text"><br><br>
          <button onclick="wish()" class="btnWish">Wish</button>
         </div>
